[project]
name = "jambo"
dynamic = ["version"]
description = "Add your description here"
requires-python = ">=3.10,<4.0"

# Project Dependencies
dependencies = [
    "jsonschema>=4.23.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "poethepoet>=0.33.1",
    "pre-commit>=4.2.0",
]


# POE Tasks
[tool.poe.tasks]
create-hooks        = "bash .githooks/set-hooks.sh"


# Build System
[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


# Linters
[tool.isort]
profile = "black"
line_length = 79
sections=[
    "FUTURE",
    "FIRSTPARTY",
    "LOCALFOLDER",
    "THIRDPARTY",
    "STDLIB",
]
